--- a/src/partials/registration.html
+++ b/src/partials/registration.html
@@ -1,1 +1,26 @@
-<h2>registration</h2>
+<h2 class="registration-title">Registration</h2>
+<div class="registration-info">
+    <time datetime="2021-05-23T11:00">May 23, 11:00</time>
+    <address class="registration-adress">New York</address>
+    <p>$ 699</p>
+</div>
+<div class="registration-form"> 
+    <h3 class="registration-subtext">Apply your personal info for registration</h3>
+    <form>
+        <div class="registration-field">
+            <label for="name"></label>
+            <input type="text" name="name" id="name" placeholder="Your name">
+        </div>
+        <div class="registration-field">
+            <label for="tel"></label>
+            <input type="yel" name="tel" id="tel" placeholder="Phone Number">
+        </div>
+        <div class="registration-field">
+            <label for="mail"></label>
+            <input type="email" name="mail" id="mail" placeholder="Email">
+        </div>
+        <div class="registration-submit">
+            <button type="submit" class="button">Register</button>
+        </div>
+    </form>
+</div>
