--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -7,6 +7,7 @@
 
 // імпорт компонентів
 @import './components/button';
+@import './components/form';
 @import './components/socials';
 
 // імпорт секцій
