--- a/src/sass/layout/_registration.scss
+++ b/src/sass/layout/_registration.scss
@@ -2,29 +2,83 @@
     margin-bottom: 30px;
 }
 
-.registration-adress {
-    margin-bottom: 25px;
-}
+.registration-all {
 
-.registration-subtext {
-    margin-bottom: 15px;
-}
+    @media screen and (min-width: 768px) {
+        display: flex;
 
-.registration-form {
-    padding-left: 30px;
-    padding-right: 30px;
+        box-shadow: -4px -4px 4px rgba(171, 129, 108, 0.15), 4px 4px 4px rgba(171, 129, 108, 0.15);
+        border-radius: 150px;
+    }
+    
 }
 
 .registration-info {
-    padding-left: 30px;
-    padding-right: 30px;
-
     font-weight: 500;
     font-size: 18px;
     line-height: 1.22;
     text-align: center;
 
+    border-top: 0;
+    border-right: 0;
     border-bottom: 1px solid rgba(171, 129, 108, 0.5);
+    border-left: 0;
+
+    @media screen and (min-width: 768px) {
+        margin-top: 35px;
+        margin-bottom: 35px;
+        padding-top: 20px;
+        padding-left: 35px;
+        padding-right: 30px;
+
+        border-right: 1px solid rgba(171, 129, 108, 0.5);
+        border-bottom: 0;
+
+        text-align: right;
+    }
+
+    @media screen and (min-width: 1200px) {
+        padding-left: 110px;
+    }
+}
+
+.registration-adress {
+    margin-bottom: 25px;
+
+    @media screen and (min-width: 768px) {
+        margin-bottom: 35px;
+    }
+}
+
+.registration-unit {
+    margin-top: 15px;
+    margin-bottom: 45px;
+
+    @media screen and (min-width: 768px) {
+        margin-top: 55px;
+        margin-left: 30px;
+    }
+}
+
+.registration-subtext {
+    margin-bottom: 15px;
+
+    @media screen and (min-width: 768px) {
+        width: 290px;
+
+        font-style: normal;
+        font-weight: normal;
+        font-size: 16px;
+        line-height: 1.25;
+        color: #2E2520;
+    }
+}
+
+.registration-form {
+    @media screen and (min-width: 768px) {
+        display: flex;
+    }
+    
 }
 
 .registration-field {
@@ -32,6 +86,16 @@
     display: flex;
     flex-direction: column;
     margin-bottom: 25px;
+
+    @media screen and (min-width: 1200px) {
+        width: 235px;
+    }
+}
+
+.registration-button {
+    @media screen and (min-width: 768px) {
+        margin-left: 25px;
+    }
 }
 
 .registration-submit {
