Виправив анімацію лого

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -23,7 +23,7 @@
                     <li class="navigation-list__item"><a class="link navigation-list__link" href="">Contacts</a></li>
                 </ul>
                 <div class="menu-thumb">
-                    <img src="./images/svg-icons/logo.svg" alt="">
+                    <img class="menu-thumb__logo" src="./images/svg-icons/logo.svg" width="190" height="85" alt="">
                 </div>
             </nav>
             <button class="header-button" type="button" data-menu-button aria-expanded="false">
