--- a/src/sass/layout/_menu.scss
+++ b/src/sass/layout/_menu.scss
@@ -68,8 +68,8 @@
       text-align: center;
       pointer-events: auto;
       transform: scale(1);
-      transition: opacity 500ms cubic-bezier(0.3, 0.79, 0.92, 0.15),
-        transform 500ms cubic-bezier(0.3, 0.79, 0.92, 0.15);
+      transition: opacity 300ms cubic-bezier(0.3, 0.79, 0.92, 0.15),
+        transform 300ms cubic-bezier(0.3, 0.79, 0.92, 0.15);
     }
   }
   @media screen and (min-width: 1280px) {
@@ -104,7 +104,7 @@
 
 .header-button.is-open:hover,
 .header-button.is-open:focus .icon--close {
-  transition: transform 500ms cubic-bezier(0.3, 0.79, 0.92, 0.15) 0ms;
+  transition: transform 300ms cubic-bezier(0.3, 0.79, 0.92, 0.15) 300ms;
   transform: rotate(-360deg);
   transform-origin: center center;
 }
@@ -115,16 +115,17 @@
 
 .menu-thumb {
   @media screen and (max-width: 1279px) {
-    display: block;
+    display: flex;
     position: fixed;
     z-index: 205;
     overflow: hidden;
-    top: -50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 190px;
-    height: 85px;
-    transition: transform 1000ms cubic-bezier(0.3, 0.79, 0.92, 0.15);
+    bottom: 100%;
+    left: 0;
+    width: 100%;
+    height: 110px;
+
+    justify-content: center;
+    padding-top: 25px;
   }
   @media screen and (min-width: 1280px) {
     display: none;
@@ -132,5 +133,11 @@
 }
 
 .navigation-list.is-open + .menu-thumb {
-  transform: translate(-50%, 350%);
+  transition: transform 300ms cubic-bezier(0.3, 0.79, 0.92, 0.15) 300ms;
+  transform: translateY(100%);
+}
+
+.menu-thumb__logo {
+  display: block;
+  position: fixed;
 }
