--- a/src/sass/layout/_menu.scss
+++ b/src/sass/layout/_menu.scss
@@ -114,7 +114,7 @@
 }
 
 .menu-thumb {
-  @media screen and (max-width: 1279px) {
+  @media screen and (max-width: 767px) {
     display: flex;
     position: fixed;
     z-index: 205;
@@ -123,7 +123,18 @@
     left: 0;
     width: 100%;
     height: 110px;
-
+    justify-content: center;
+    padding-top: 20px;
+  }
+  @media screen and (min-width: 768px) and (max-width: 1279px) {
+    display: flex;
+    position: fixed;
+    z-index: 205;
+    overflow: hidden;
+    bottom: 100%;
+    left: 0;
+    width: 100%;
+    height: 110px;
     justify-content: center;
     padding-top: 25px;
   }
