--- a/src/partials/contact.html
+++ b/src/partials/contact.html
@@ -1,6 +1,1 @@
-<section class="contact-us section">
-  <div class="conteiner">
-    <h2 class="section__title">Contact</h2>
-    <p class="section__subtitle">We will answer any question!</p>
-  </div>
-</section>
+<h2>contact</h2>
