--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -263,15 +263,38 @@ input {
   }
 }
 
-.bg-conteiner {
-  position: relative;
-  background-repeat: no-repeat;
-  background-size: cover;
+.header-conteiner {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+@media screen and (max-width: 767.98px) {
+  .header-conteiner {
+    padding-top: 5px;
+    padding-bottom: 35px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .header-conteiner {
+    padding-top: 27px;
+    padding-bottom: 15px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .header-conteiner {
+    padding-top: 30px;
+    padding-bottom: 30px;
+  }
 }
 
 @media screen and (max-width: 767.98px) {
   .bg-conteiner {
     background-image: url(../images/bg-image/mobile/header-bg.png);
+    background-repeat: no-repeat;
+    background-size: cover;
   }
 }
 
@@ -287,6 +310,8 @@ input {
 @media screen and (min-width: 768px) {
   .bg-conteiner {
     background-image: url(../images/bg-image/tablet/header-bg.png);
+    background-repeat: no-repeat;
+    background-size: cover;
   }
 }
 
@@ -301,9 +326,6 @@ input {
 
 @media screen and (min-width: 1280px) {
   .bg-conteiner {
-    max-width: 2000px;
-    margin-left: auto;
-    margin-right: auto;
     background-image: url(../images/header/desktop/spoon.png),
       url(../images/bg-image/desktop/header-bg.png);
     background-size: contain, cover;
@@ -322,39 +344,6 @@ input {
   }
 }
 
-.header-conteiner {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
-}
-
-@media screen and (max-width: 767.98px) {
-  .header-conteiner {
-    padding-top: 5px;
-    padding-bottom: 35px;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .header-conteiner {
-    padding-top: 25px;
-    padding-bottom: 15px;
-  }
-}
-
-@media screen and (min-width: 1280px) {
-  .header-conteiner {
-    -webkit-box-pack: start;
-    -ms-flex-pack: start;
-    justify-content: flex-start;
-    padding-top: 30px;
-    padding-bottom: 30px;
-  }
-}
-
 .bg-image {
   position: absolute;
 }
@@ -362,16 +351,16 @@ input {
 @media screen and (max-width: 767.98px) {
   .bg-image {
     top: 0px;
-    left: 0;
-    width: 120px;
+    left: -15px;
+    width: 129.69px;
   }
 }
 
 @media screen and (min-width: 768px) {
   .bg-image {
     top: 0;
-    right: 26%;
-    width: 380px;
+    right: 130px;
+    width: 377.89px;
   }
 }
 
@@ -379,41 +368,20 @@ input {
   .bg-image {
     top: 0px;
     right: 0;
-    width: 719px;
+    width: 793px;
   }
 }
 
-.header-button {
-  position: relative;
-  top: 0;
-  right: 0;
-  border: none;
-  padding: 0;
-  line-height: 0;
-  background-color: transparent;
-  z-index: 300;
-}
-
-@media screen and (min-width: 1280px) {
-  .header-button {
+@media screen and (max-width: 1279.98px) {
+  .bg-image-spoon {
     display: none;
   }
 }
 
-.header-button .icon--close {
-  display: none;
-}
-
-.header-button .icon--menu {
-  display: block;
-}
-
-.header-button.is-open .icon--close {
-  display: block;
-}
-
-.header-button.is-open .icon--menu {
-  display: none;
+@media screen and (min-width: 1280px) {
+  .bg-image-spoon {
+    position: absolute;
+  }
 }
 
 .hero__title {
@@ -557,99 +525,6 @@ input {
 
 .header-button.is-open .icon--menu {
   display: none;
-}
-
-@media screen and (max-width: 1279px) {
-  .menu-thumb {
-    display: block;
-    position: fixed;
-    z-index: 106;
-    overflow: hidden;
-    top: -50%;
-    left: 50%;
-    -webkit-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-    width: 190px;
-    height: 85px;
-    -webkit-transition: -webkit-transform 1000ms cubic-bezier(0.3, 0.79, 0.92, 0.15);
-    transition: -webkit-transform 1000ms cubic-bezier(0.3, 0.79, 0.92, 0.15);
-    transition: transform 1000ms cubic-bezier(0.3, 0.79, 0.92, 0.15);
-    transition: transform 1000ms cubic-bezier(0.3, 0.79, 0.92, 0.15),
-      -webkit-transform 1000ms cubic-bezier(0.3, 0.79, 0.92, 0.15);
-  }
-}
-
-@media screen and (min-width: 1280px) {
-  .menu-thumb {
-    display: none;
-  }
-}
-
-.navigation-list.is-open + .menu-thumb {
-  -webkit-transform: translate(-50%, 300%);
-  transform: translate(-50%, 300%);
-}
-
-@media screen and (max-width: 767.98px) {
-  .hero__conteiner {
-    width: 100%;
-    text-align: center;
-    padding-bottom: 10px;
-    position: relative;
-    z-index: 100;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .hero__conteiner {
-    padding-bottom: 80px;
-  }
-}
-
-@media screen and (min-width: 1280px) {
-  .hero__conteiner {
-    padding-bottom: 57px;
-  }
-}
-
-.hero__title {
-  font-family: var(--decorative-font);
-  font-size: 30px;
-  line-height: 1.27;
-  color: var(--main-text-color);
-  margin-bottom: 3px;
-  width: 224px;
-}
-
-@media screen and (max-width: 767.98px) {
-  .hero__title {
-    margin: auto;
-  }
-}
-
-@media screen and (min-width: 1280px) {
-  .hero__title {
-    font-size: 64px;
-    line-height: 1.02;
-    margin-bottom: 15px;
-    width: 490px;
-  }
-}
-
-.hero__text {
-  font-family: var(--main-font);
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.25;
-  margin: 0;
-  color: var(--main-text-color);
-}
-
-@media screen and (min-width: 1280px) {
-  .hero__text {
-    font-size: 24px;
-    line-height: 1.21;
-  }
 }
 
 .about {
